--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,8 @@
 @plugin "flyonui";
 @import "flyonui/variants.css";
 @source "./node_modules/flyonui/flyonui.js";
+@plugin "@iconify/tailwind4";
+@import "flyonui/src/vendor/apexcharts.css";
 
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
