--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
 @source "./node_modules/flyonui/flyonui.js";
 @plugin "@iconify/tailwind4";
 @import "flyonui/src/vendor/apexcharts.css";
+@import "flyonui/src/vendor/flatpickr.css";
 
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
